syntax = "proto3";

import "payload.proto";

message CertificatePayload {
	string TODO = 1;
}

message Certificate {
	string TODO = 1;
}

service gRPC_service {
	rpc getCertificate(CertificatePayload) returns (Certificate) {};
	//rpc getDigitalSignature(bytes) returns (SignatureResponse) {};
}

